; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/crypto/extr_ghash_s390.c_ghash_flush.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/crypto/extr_ghash_s390.c_ghash_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ghash_desc_ctx = type { i32, i32* }

@GHASH_BLOCK_SIZE = common dso_local global i32 0, align 4
@CPACF_KIMD_GHASH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ghash_desc_ctx*)* @ghash_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ghash_flush(%struct.ghash_desc_ctx* %0) #0 {
  %2 = alloca %struct.ghash_desc_ctx*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store %struct.ghash_desc_ctx* %0, %struct.ghash_desc_ctx** %2, align 8
  %5 = load %struct.ghash_desc_ctx*, %struct.ghash_desc_ctx** %2, align 8
  %6 = getelementptr inbounds %struct.ghash_desc_ctx, %struct.ghash_desc_ctx* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  store i32* %7, i32** %3, align 8
  %8 = load %struct.ghash_desc_ctx*, %struct.ghash_desc_ctx** %2, align 8
  %9 = getelementptr inbounds %struct.ghash_desc_ctx, %struct.ghash_desc_ctx* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %33

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @GHASH_BLOCK_SIZE, align 4
  %15 = load %struct.ghash_desc_ctx*, %struct.ghash_desc_ctx** %2, align 8
  %16 = getelementptr inbounds %struct.ghash_desc_ctx, %struct.ghash_desc_ctx* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = sub nsw i32 %14, %17
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %13, i64 %19
  store i32* %20, i32** %4, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = load %struct.ghash_desc_ctx*, %struct.ghash_desc_ctx** %2, align 8
  %23 = getelementptr inbounds %struct.ghash_desc_ctx, %struct.ghash_desc_ctx* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @memset(i32* %21, i32 0, i32 %24)
  %26 = load i32, i32* @CPACF_KIMD_GHASH, align 4
  %27 = load %struct.ghash_desc_ctx*, %struct.ghash_desc_ctx** %2, align 8
  %28 = load i32*, i32** %3, align 8
  %29 = load i32, i32* @GHASH_BLOCK_SIZE, align 4
  %30 = call i32 @cpacf_kimd(i32 %26, %struct.ghash_desc_ctx* %27, i32* %28, i32 %29)
  %31 = load %struct.ghash_desc_ctx*, %struct.ghash_desc_ctx** %2, align 8
  %32 = getelementptr inbounds %struct.ghash_desc_ctx, %struct.ghash_desc_ctx* %31, i32 0, i32 0
  store i32 0, i32* %32, align 8
  br label %33

33:                                               ; preds = %12, %1
  ret i32 0
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @cpacf_kimd(i32, %struct.ghash_desc_ctx*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
